# curly-pancake

./: .dockerignore  Dockerfile  README.md  pyproject.toml
migrations/: 0001.create-todos.rollback.sql  0001.create-todos.sql
queries/: todos.sql
tests/: test_todo_app.py
todo_app/: __init__.py  main.py  model.py
