[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["dsqrt4"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pugsql = "^0.2.3"
pymysql = "^1.0.2"
yoyo-migrations = "^7.3.1"
cryptography = "^3.4.6" # seems neccessary for yoyo to authenticate

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
